<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/light_purple"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include
            layout="@layout/navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/layout_vertical_margin_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_vertical_margin_small"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_bigest" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/layout_vertical_margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version_title"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/layout_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_emmagee_intro"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_marginBottom="@dimen/layout_vertical_margin"
                    android:layout_marginLeft="@dimen/layout_vertical_margin_small"
                    android:layout_marginRight="@dimen/layout_vertical_margin_small"
                    android:layout_marginTop="@dimen/layout_vertical_margin"
                    android:background="@color/light_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_team"
                    android:textColor="@color/mix_gray"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:text="@string/about_project_address"
                    android:textColor="@color/mix_gray"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/checkUpdate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="@dimen/layout_marginBottom_test"
            android:layout_marginLeft="@dimen/layout_marginLeft_test"
            android:layout_marginRight="@dimen/layout_marginRight_test"
            android:layout_marginTop="@dimen/layout_marginTop_test"
            android:background="@drawable/test_button"
            android:text="@string/check_upgrade"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_test" />
    </LinearLayout>

</LinearLayout>